--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.jpa.database=MYSQL
+spring.datasource.url=jdbc:mysql://localhost/ecommerceapi?createDatabaseIfNotExist=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=marcos83
 
+spring.jpa.show-sql=true
