--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
 			<scope>runtime</scope>
 		</dependency>
 		
+		<!-- Flyway -->
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
